# ai-native-dev

./: .gitignore  README.md
week1/: README.md
week1/.claude/: settings.local.json
week1/pawsmatch/: .gitignore  CLAUDE.md  README.md  generate_pets.py  main.py  pyproject.toml
week1/pawsmatch/app/: index.html  package-lock.json  package.json
week1/pawsmatch/asset-generation/: pets.json
week1/prompts/: prompts.md
week1/slides/: slides.md
week2/: README.md
week2/extra slides/: sdlc_relations.md
week2/prompts/: prompts.md
week2/resources/: sdlc_relations.md  ui_glossary.md
week2/slides/: slides.md
week2/travelensapp/: CLAUDE.md  README.md  package-lock.json  package.json
week3/: README.md
week3/prompts/: create-app.md  prompts.md
week3/rent-my-gear/: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
week3/rent-my-gear/docs/: ARCHITECTURE.md  DIAGRAMS.md  ONBOARDING.md  TESTING.md
week3/rent-my-gear/scripts/: generate_inventory.py  pyproject.toml  setup_gcs.py
week3/slides/: slides.md
week4/: README.md
week4/front-back-boilerplate/: CLAUDE.md  ONBOARDING.md  README.md  TECHNICAL_DOCS.md
week4/front-back-boilerplate/backend/: .gitignore  config.py  main.py  pyproject.toml
week4/front-back-boilerplate/backend/tests/: test_main.py
week4/prompts/: app.md  create-app.md  deploy.md  front-back-boilerplate.md
week4/slides/: slides.md
week4/traderpulse/: ARCHITECTURE.md  CLAUDE.md  ONBOARDING.md  README.md  docker-compose.yml
week4/traderpulse/backend/: .gitignore  (+7 more)
(+82 files in other folders)
