[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend with Python 3.14"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.setuptools]
py-modules = ["main", "config"]
